# voting_dapp

./: .gitignore  README copy.md  README.md
anchor/: Anchor.toml  Cargo.toml
anchor/programs/multisig/: Cargo.toml  buffer.json
anchor/programs/multisig/src/: errors.rs  lib.rs  mod.rs  utils.rs
anchor/programs/multisig/src/instructions/: approve.rs  approve_threshold_change.rs  approve_transaction.rs  delete_approval.rs  delete_threshold_change_approval.rs  delete_tx_approval.rs  execute.rs  execute_threshold_change.rs  execute_transaction.rs  initialize.rs  mod.rs  propose.rs  propose_threshold_change.rs  propose_transaction.rs
anchor/programs/multisig/src/states/: escrow.rs  mod.rs  multisig.rs  transaction.rs
anchor/programs/voting/src/: lib.rs
anchor/programs/voting/src/errors/: mod.rs
anchor/programs/voting/src/instructions/: create_poll.rs  initialize.rs  mod.rs  register_candidate.rs  vote.rs
anchor/programs/voting/src/states/: candidate.rs  mod.rs  poll.rs  registerations.rs  voter.rs
anchor/script/: Cargo.toml
anchor/script/src/: main.rs
anchor/tests/: voting.spec.ts
src/app/: layout.tsx
src/app/components/: Header.tsx
src/app/services/: blockchain.service.tsx
