[package]
name = "multisig"
version = "0.1.0"
edition = "2021"


[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
# anchor-spl = { workspace = true, features = ["metadata"] }
solana-ibc = { workspace = true, features = ["cpi"] }
solana-program.workspace = true
bs58.workspace = true
anchor-client.workspace = true
anyhow.workspace = true
# spl-associated-token-account.workspace = true
# spl-token.workspace = true
dotenv.workspace = true