[package]
name = "script"
version = "0.1.0"
edition = "2021"


[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
# anchor-spl = { workspace = true, features = ["metadata"] }
solana-program = "1.17.30"
bs58 = { version = "0.5.0", features = ["alloc"] }
anchor-client = "0.29.0"
anyhow = "1.0.32"
spl-associated-token-account = "2.2.0"
# spl-token.workspace = true
dotenv = "0.15.0"
multisig = { path = "../programs/multisig", features = ["cpi"] }