[package]
name = "multisig"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "multisig"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-client = "0.29.0" 
dotenv = "0.15" 
bs58 = "0.4"



# [dev-dependencies]
# # anchor-lang = "0.29.0"
# solana-program-test = "1.18.0"
# solana-sdk = "1.18.0"
# tokio = { version = "1.37.0", features = ["macros"] }

